--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3",
-    "@mui/material": "5.15.15",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.0",
+    "@mui/material": "5.15.15",
+    "react": "^18.2.0",
     "react-datepicker": "4.25.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.22.3",
     "react-tabs": "6.0.2"
   },
   "devDependencies": {
